src/App.css
body {
  background-color: #110;
}

.App {
  height: auto;
  font-size: 16px;
  text-align: center;
  max-width: 85%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
}

h1 {
  color: white;
  margin: 1em 0 0 0;
}

h2 {
  color: rgb(22, 184, 130);
  margin: 1em 0 0 0;
}

footer {
  color: white;
  opacity: .5;
  font-size: .7em;
  margin-bottom: 2.5em;
}

i {
  color: white;
  cursor: pointer;
}

a {
  text-decoration: none;
  color: white;
}

.input-container {
  margin: 0 auto;
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
  max-width: 20%;
  max-height: 1em;
  position: relative;
}


.suggestions {
  position: relative;
  width: fit-content;
}

.search-suggestions {
  position: absolute;
  z-index: 999;
  height: auto;
  width: auto;
  background-color:white;
  text-align: left;
  font-size: .65rem;
  display: block;
}

.set-border {
  border-radius: 5px 0 0 0;
}

.suggestions p {
  padding: .3em 1.2em;
}

.suggestions p:hover {
  cursor: pointer;
  background-color: rgba(182, 179, 179, 0.3)
}

.hidden {
  display: none;
}

input {
  min-height: 2em;
  border-radius: .5em 0 0 .5em;
  border: 0;
  padding-left: 1em;
}

input:focus {
  outline: none;
}

#search-btn {
  background-color: rgb(22, 184, 130);
  border: 0;
  outline: none;
  width: 100px;
  padding: 0 1em;
  min-height: 2em;
  cursor: pointer;
  border-radius: 0 .5em .5em 0;
  color: white;
}

#search-btn:hover {
  background-color: #079a69;
}

input::placeholder {
  font-size: .8em;
}

button p {
  font-size: .7em;
}

.btn-container {
  margin-top: 2em;
}

.btn {
  margin: 0 .5em;
  padding: .5em 1em;
  border: 1px solid #079a69;
  border-radius: .5em;
  color: #079a69;
  background-color: #110;
  cursor: pointer;
  font-size: .7rem;
}

.btn:hover {
  background-color: #079a69;
  color: white;
}

.query-text {
  color: white;
  font-size: .85em;
  opacity: .5;
  margin-top: 1.25em;
}

.movie-container {
  display: flex;
  flex-direction: column;
  width: auto;
  height: auto;
}

.movie-card-container {
  text-align: center;
  height: auto;
}

.movie-card {
  padding: 1.75em .75em 1em .75em;
  display: inline-flex;
  flex-direction: column;
  max-width: 12.5em;
  min-height: 30vh;
  color: white;
  font-size: .8em;
  text-align: left;
  cursor: pointer;
}

.movie-card:hover {
  opacity: 0.7;
}

.poster {
  margin: 0 auto;
  max-width: 12.5em;
  border-radius: 1em;
  object-fit: cover;
}

#movie-title {
  margin-top: .5em;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 100%;
}

.movie-details {
  display: flex;
  justify-content: space-between;
  margin-top: .5em;
  opacity: .6;
}

#movie-type {
  font-size: .8em;
  padding: 0 .6em;
  border: 1px solid gray;
  border-radius: .5em;
}

.pageFooter {
  margin: 2em 0 4em 0;
}

.active {
  background-color: #079a69;
  color: white;
}

.prevNext {
  border: 0;
  background-color: #110;
  color: white;
  padding: .5em 1em;
  font-size: .75em;
  cursor: pointer;
}

.prevNext:hover {
  color: #079a69;
  border-bottom: 1px solid #079a69;
}

.btn-img {
  height: 1.4rem;
}

.details-container {
  display: flex;
  flex-direction: column;
  color: white;
  /* border-left: 2px solid #079a69; */
  max-width: 48.75em;
  background-color: rgb(39, 37, 37);
  border-radius: .5em;
  padding-bottom: 5em;
  margin-bottom: 5em;
  box-shadow: 8px 8px #1bb481;
}

.backdrop {
  border-radius: .5em .5em 0 0;
  object-fit: cover;
}

.right-details {
  text-align: left;
  display: flex;
  flex-direction: row;
  padding-top: 1.5em;
}

.right-details h3{
  font-size: 1.8rem;
}

.right-details-one p {
  display: inline;
  margin: 0 1em 0 0;
  font-size: .8em;
  opacity: .5;
}

.right-details-one {
  width: 50%;
  margin-left: 1em;
}

.right-details-two {
  display: flex;
  flex-direction: column;
  width: 50%;
  text-align: right;
  margin-right: 1em;
}

.right-details-two p {
  display: inline;
  font-size: .8em;
}

.left-details {
  border-radius: 0 1em 0 0;
}

.movie-info-container {
  margin: 0 auto;
  max-width: 60%;
  text-align: center;
  font-size: .9rem;
}

.movie-info-container p {
  margin-top: 1em;
  line-height: 1.4em;
}

.movie-info-container h1 {
  font-style: italic;
  font-size: 1.3rem;
}

@media only screen and (max-width: 768px) {
  .movie-card-container {
    min-width: 90%;
  }

  .movie-container {
    min-width: 90%;
  }
}

@media only screen and (max-width: 481px) {

  .movie-card-container {
    width: 100%;
    margin: 1em auto;
  }

  .movie-card {
    max-width: 10.5em;
  }

  .poster {
    margin: 0 auto;
    max-width: 100%;
    border-radius: 1em;
    object-fit: cover;
  }

  .backdrop {
    margin: 0 auto;
    max-width: 100%;
    object-fit: cover;
  }

  .details-container {
    font-size: .8em;
  }
  .right-details-two {
  padding-top: .5em;
  }

  .right-details h3{
  font-size: 1rem;
}

.movie-info-container h1 {
  font-style: italic;
  font-size: .8rem;
}

.suggestions p {
  padding: .3em 2em;
  font-size: .5rem;
}
}

